# mandelbrot_rs

./: .gitignore  Cargo.toml  README.md  shader.wgsl
core/: Cargo.toml
core/src/: color.rs  data.rs  lib.rs  main.rs  sets.rs
gui/: Cargo.toml
gui/src/: main.rs  mandelbrot.rs  util.rs
gui/src/mandelbrot/: interactions.rs  logic.rs  mod.rs  ui.rs
src/: color.rs  data.rs  main.rs  sets.rs
