[package]
name = "mandelbrot_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
png = "0.17.6"
pbr = "1.0.4"

# tiny-skia = "0.8.2"
# png_pong = "0.8.2"
# pix = "0.13.2"

[dependencies.palette]
version = "0.6.1"
default-features = false
features = ["std"]

# For flamegraphs
[profile.release]
debug = true
