[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
egui = "0.19.0"
eframe = "0.19.0"
egui_extras = { version = "0.19.0", default-features = false, features = [
    "image",
] }
image = { version = "0.24", features = ["jpeg", "png"] }
pix = "0.13.2"
png_pong = "0.7"
core = { path = "../core" }
